// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`inspector-access GET /change/:source should render changeInspectorAccess page for the appellant answer when source is appellant from appeals details 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Will an inspector need to access your land or property?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="inspector-access-radio" name="inspectorAccessRadio"
                                        type="radio" value="yes" data-aria-controls="conditional-inspector-access-radio">
                                        <label class="govuk-label govuk-radios__label" for="inspector-access-radio">Yes</label>
                                    </div>
                                    <div class="govuk-radios__conditional govuk-radios__conditional--hidden"
                                    id="conditional-inspector-access-radio">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label" for="inspector-access-details">Enter reason</label>
                                            <textarea class="govuk-textarea" id="inspector-access-details"
                                            name="inspectorAccessDetails" rows="3"></textarea>
                                        </div>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="inspector-access-radio-2" name="inspectorAccessRadio"
                                        type="radio" value="no" checked>
                                        <label class="govuk-label govuk-radios__label" for="inspector-access-radio-2">No</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`inspector-access GET /change/:source should render changeInspectorAccess page for the appellant answer when source is appellant from appellant case 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Will an inspector need to access your land or property?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="inspector-access-radio" name="inspectorAccessRadio"
                                        type="radio" value="yes" data-aria-controls="conditional-inspector-access-radio">
                                        <label class="govuk-label govuk-radios__label" for="inspector-access-radio">Yes</label>
                                    </div>
                                    <div class="govuk-radios__conditional govuk-radios__conditional--hidden"
                                    id="conditional-inspector-access-radio">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label" for="inspector-access-details">Enter reason</label>
                                            <textarea class="govuk-textarea" id="inspector-access-details"
                                            name="inspectorAccessDetails" rows="3"></textarea>
                                        </div>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="inspector-access-radio-2" name="inspectorAccessRadio"
                                        type="radio" value="no" checked>
                                        <label class="govuk-label govuk-radios__label" for="inspector-access-radio-2">No</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`inspector-access GET /change/:source should render changeInspectorAccess page for the lpa answer when source is lpa from appeals details 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Will the inspector need access to the appellant’s land or property?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="inspector-access-radio" name="inspectorAccessRadio"
                                        type="radio" value="yes" data-aria-controls="conditional-inspector-access-radio">
                                        <label class="govuk-label govuk-radios__label" for="inspector-access-radio">Yes</label>
                                    </div>
                                    <div class="govuk-radios__conditional govuk-radios__conditional--hidden"
                                    id="conditional-inspector-access-radio">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label" for="inspector-access-details">Enter the reason</label>
                                            <textarea class="govuk-textarea" id="inspector-access-details"
                                            name="inspectorAccessDetails" rows="3"></textarea>
                                        </div>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="inspector-access-radio-2" name="inspectorAccessRadio"
                                        type="radio" value="no" checked>
                                        <label class="govuk-label govuk-radios__label" for="inspector-access-radio-2">No</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`inspector-access GET /change/:source should render changeInspectorAccess page for the lpa answer when source is lpa from lpa questionnaire 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Will the inspector need access to the appellant’s land or property?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="inspector-access-radio" name="inspectorAccessRadio"
                                        type="radio" value="yes" data-aria-controls="conditional-inspector-access-radio">
                                        <label class="govuk-label govuk-radios__label" for="inspector-access-radio">Yes</label>
                                    </div>
                                    <div class="govuk-radios__conditional govuk-radios__conditional--hidden"
                                    id="conditional-inspector-access-radio">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label" for="inspector-access-details">Enter the reason</label>
                                            <textarea class="govuk-textarea" id="inspector-access-details"
                                            name="inspectorAccessDetails" rows="3"></textarea>
                                        </div>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="inspector-access-radio-2" name="inspectorAccessRadio"
                                        type="radio" value="no" checked>
                                        <label class="govuk-label govuk-radios__label" for="inspector-access-radio-2">No</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`inspector-access POST /change/:source should re-render changeInspectorAccess page with an error when inspectorAccessDetails exceeds 1000 characters 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#inspector-access-details">Inspector access details must be 1000 characters or less</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Will the inspector need access to the appellant’s land or property?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="inspector-access-radio" name="inspectorAccessRadio"
                                        type="radio" value="yes" checked data-aria-controls="conditional-inspector-access-radio">
                                        <label class="govuk-label govuk-radios__label" for="inspector-access-radio">Yes</label>
                                    </div>
                                    <div class="govuk-radios__conditional" id="conditional-inspector-access-radio">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label" for="inspector-access-details">Enter the reason</label>
                                            <textarea class="govuk-textarea" id="inspector-access-details"
                                            name="inspectorAccessDetails" rows="3">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</textarea>
                                        </div>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="inspector-access-radio-2" name="inspectorAccessRadio"
                                        type="radio" value="no">
                                        <label class="govuk-label govuk-radios__label" for="inspector-access-radio-2">No</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`inspector-access POST /change/:source should re-render changeInspectorAccess page with an error when isRequired is "yes" but details is empty 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#inspector-access-details">Enter inspector access details</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Will the inspector need access to the appellant’s land or property?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="inspector-access-radio" name="inspectorAccessRadio"
                                        type="radio" value="yes" checked data-aria-controls="conditional-inspector-access-radio">
                                        <label class="govuk-label govuk-radios__label" for="inspector-access-radio">Yes</label>
                                    </div>
                                    <div class="govuk-radios__conditional" id="conditional-inspector-access-radio">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label" for="inspector-access-details">Enter the reason</label>
                                            <textarea class="govuk-textarea" id="inspector-access-details"
                                            name="inspectorAccessDetails" rows="3"></textarea>
                                        </div>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="inspector-access-radio-2" name="inspectorAccessRadio"
                                        type="radio" value="no">
                                        <label class="govuk-label govuk-radios__label" for="inspector-access-radio-2">No</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
